# genesis-kernel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  pyproject.toml
examples/: README.md  benchmark_genesis_vs_bnb.py  hybrid_moe_offload.py
genesis_kernel/: __init__.py  nf4_kernel.py  q4k_kernel.py  x86_emitter.py
tests/: test_kernels.py
