[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "genesis-kernel"
version = "0.2.0"
description = "JIT x86-64 kernels for LLM inference: NF4 matmul + Q4_K dot product (AVX-512)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/Anuar81/genesis-kernel"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesis_kernel*"]
